fix image and comment dark mode variables

--- a/src/index.css
+++ b/src/index.css
@@ -40,17 +40,12 @@ body {
 }
 
 /* Dark mode  */
-:root {
+/* :root {
   --bg: #000000;
   --text: #ffffff;
   --text-gray: #fdfdfd;
   --hover: #bebebe;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-}
+} */
 
 /* Default: Mobile first */
 html {
